--- a/views/layout.liquid
+++ b/views/layout.liquid
@@ -37,7 +37,19 @@
           <a class="brand" href="/">Coderstats</a>
           <div class="nav-collapse">
             <ul class="nav">
-              <li><a href="https://chrome.google.com/webstore/detail/necogepejonacpphmlmcagmbjaogpbng">Get the Chrome Extension</a></li>
+              <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Top Rankings
+                <b class="caret"></b></a>
+                 <ul class="dropdown-menu">
+                   <li><a href="/ranking/coders-by-language">Coders by Languages</a></li>
+                   <li><a href="/ranking/coders-by-forks">Coders by Forks</a></li>
+                   <li><a href="/ranking/coders-by-watchers">Coders by Watchers</a></li>
+                   <li><a href="/ranking/organizations-by-language">Organizations by Languages</a></li>
+                   <li><a href="/ranking/organizations-by-forks">Organizations by Forks</a></li>
+                   <li><a href="/ranking/organizations-by-watchers">Organizations by Watchers</a></li>
+                 </ul>
+              </li>
+              <li><a href="https://chrome.google.com/webstore/detail/necogepejonacpphmlmcagmbjaogpbng">Chrome Extension</a></li>
               <li class="addthis_toolbox addthis_default_style"><a class="addthis_counter addthis_pill_style"></a></li>
             </ul>
           </div>
