moved json file to data dir whose content is ignored, use permuation instead of combination which were not used properly, use adjacency length as node weigth

--- a/views/layout.liquid
+++ b/views/layout.liquid
@@ -81,7 +81,7 @@
 
     {% if languagegraph %}
       <script src="/vendor/jit/js/hypertree.min.js"></script>
-      <script src="/js/languagegraph.json"></script>
+      <script src="/data/languagegraph.json"></script>
       <script src="/js/languagegraph.js"></script>
     {% endif %}
 
