- renamed param from ghuser to gh_login for consistency - added badge and iframe handlers and views for embedding achievements badge

--- a/views/index.liquid
+++ b/views/index.liquid
@@ -2,7 +2,7 @@
   <div class="hero-unit" id="userform">
     <header><h1>Get your coder stats</h1></header>
     <form action="/coderstats" method="GET" id="coderstats" name="coderstats">
-      <input class="username" name="ghuser" id="ghuser" placeholder="Your Github user name" required>
+      <input class="username" name="gh_login" id="gh_login" placeholder="Your Github user name" required>
       <input class="button" type="submit" value="Get Stats">
     </form>
   </div>
