--- a/views/coder.liquid
+++ b/views/coder.liquid
@@ -47,8 +47,10 @@
       <div class="span3" id="achievements">
         <header><h2>Achievements</h2></header>
         {% for a in user.achievements %}
-          <button class="btn-success btn-large" title="{{a[1]}}">{{a[0]}}</button>
+          <button class="btn-success btn-large achievements" title="{{a[1]}}">{{a[0]}}</button>
         {% endfor %}
+        <button id="button_achievements" class="btn"><i class="icon-share"></i>Get Achievements Badge</button>
+        <textarea id="textarea_achievements" class="input-xlarge" id="textarea" rows="5">&lt;script src=&quot;{{achievements_embed_url|escape}}?width=300px&amp;amp;height=250px&amp;amp;badge_title=show&quot;&gt;&lt;/script&gt;</textarea>
       </div>
     </div>
     {% endif %}
