added embed info text

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -37,7 +37,7 @@ padding-top:1em;
 #indexstats h2 {
 padding-left:1.4em;
 }
-#achievements .achievements{
+#achievements .achievement{
 margin-bottom:.5em;
 cursor:help;
 }
