added counts for users and repos to front page #gklst

--- a/views/index.liquid
+++ b/views/index.liquid
@@ -5,6 +5,7 @@
       <input class="username" name="gh_login" id="gh_login" placeholder="Your Github user name" required>
       <input class="button" type="submit" value="Get Stats">
     </form>
+    <p>Statistics for {{counts.users}} GitHub users and {{counts.repos}} repositories</p>
   </div>
 </div></div>
 
